# ITransferMusic

./: README.md
BackEnd/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
BackEnd-spring-boot/: pom.xml
BackEnd/src/: dependencies.py  main.py
BackEnd/src/api/v1/: router.py
BackEnd/src/api/v1/routes/: accounts.py  auth.py  generator.py  playlists.py  reviews.py  shares.py  syncs.py  transfers.py
BackEnd/src/core/: config.py  db.py  scheduler.py  security.py
BackEnd/src/integrations/: amazon_music.py  apple_music.py  base.py  registry.py  spotify.py  youtube.py
BackEnd/src/integrations/oauth/: base.py  google.py  registry.py  spotify.py
BackEnd/src/models/: common.py  linked_account.py  review.py  sync.py  transfer.py  user.py
BackEnd/src/schemas/: auth.py  generator.py  playlist.py  review.py  share.py  sync.py  track.py  transfer.py  user.py
BackEnd/src/services/: account_service.py  auth_service.py  generator_service.py  playlist_transfer_service.py  review_service.py  sync_runner.py  sync_service.py
FrontEnd/: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
FrontEnd-angular/: angular.json  package-lock.json  package.json
FrontEnd-angular/src/: index.html
FrontEnd-angular/src/app/: app.component.spec.ts  app.module.ts
FrontEnd-angular/src/app/components/about/: about.component.html
FrontEnd-angular/src/app/components/feature/: feature.component.html
FrontEnd-angular/src/app/components/footer/: footer.component.css  footer.component.html
FrontEnd/src/: index.html  styles.css
FrontEnd/src/app/: app.component.ts  app.config.ts  app.routes.ts
FrontEnd/src/app/core/utils/: timezone.ts  (+2 more)
FrontEnd/src/app/shared/: features.data.ts
FrontEnd/src/assets/i18n/: en.json  pt-BR.json
FrontEnd/src/environments/: environment.production.ts  environment.ts
Legado/legacy-BackEnd/: .env.example  README.md  pyproject.toml
Legado/legacy-BackEnd/src/main/java/com/projeto/ITransferMusic/service/: PlaylistTransferService.java
Legado/legacy-FrontEnd/: tsconfig.json
Legado/legacy-FrontEnd/src/: index.html
legacy-BackEnd/: pom.xml
legacy-FrontEnd/: package-lock.json  package.json
legacy-FrontEnd/src/app/: app.module.ts
(+70 files in other folders)
